# SnapBox-v2

./: .gitignore  AUTHORS  ChangeLog  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
etc/snapbox/: server.conf
scripts/: styles.sh
snapbox/: decorators.py  exception.py  exceptions.py  log.py  server.py
snapbox/endpoint/: assets.py  auth.py  base.py  config.py  error.py  pictures.py  snap.py  upload.py  websocket.py
snapbox/lib/: __init__.py  camera.py  common.py  database.py  models.py  picture.py
usr/local/share/snapbox/conf/: settings.conf
