[metadata]
name = SnapBox
version = 1.0.0
summary = Snapbox
long_description = file: README.md
author = Thibaud Demay
author_email = demay.thibaud@gmail.com
license = Copyright

[files]
packages =
    snapbox
data_files =
    /etc = etc/*
    /var = var/*
    /usr = usr/*

[entry_points]
console_scripts =
    snapbox-server = snapbox.server:main

[global]
setup-hooks =
    pbr.hooks.setup_hook

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[pbr]
warnerrors = True
autodoc_tree_index_modules = True
